[workspace]
members = [
    "crates/rucol-core",
    "crates/rucol-storage",
    "crates/rucol-services",
    "crates/rucol-grpc",
    "crates/rucol-security",
    "crates/rucol-cli",
    "crates/rucol-tests",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Sudha <your_email@example.com>"]
description = "Rucol: Modular accounting engine written in Rust"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4","serde"] }
thiserror = "2.0.17"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
tonic = { version = "0.14.2", features = ["transport"] }
prost = "0.14.1"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
sea-orm = { version = "1.1", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
async-trait = "0.1"
parking_lot = "0.12"
once_cell = "1.19"
config = "0.15.18"
dirs = "6.0.0"
rust_decimal = "1.30"

